# footSwitchEventHandling

./: .gitignore  CMakeLists.txt  EVALUATION.md  README.md  main.cxx  testRelease.sh
etc/X11/xorg.conf.d/: 50-rding-disable.conf
etc/udev/rules.d/: 80-footswitch.rules
scripts/: disableRDing.sh  hotplug.sh  nextDesktop.sh  previousDesktop.sh  runDbusCmd.sh  testPress.sh
scripts/cmd/1/: P  R
scripts/cmd/2/: P  R
scripts/cmd/3/: P  R
